# iopipe

./: .gitignore  .travis.yml  README.md  concepts.md  dub.sdl  meson.build
docs/: file_hashes.json  index.html  iopipe.html  sitemap.xml  symbols.js
docs/iopipe/: buffer.html  bufpipe.html  refc.html  stream.html  textpipe.html  traits.html  valve.html  zip.html
docs/iopipe/buffer/: AllocatedBuffer._allocator.html  AllocatedBuffer.allocator.html  AllocatedBuffer.avail.html  AllocatedBuffer.capacity.html  AllocatedBuffer.extend.html  AllocatedBuffer.html  AllocatedBuffer.releaseBack.html  AllocatedBuffer.releaseFront.html  AllocatedBuffer.this.html  AllocatedBuffer.window.html  BufferManager.avail.html  BufferManager.capacity.html  BufferManager.extend.html  BufferManager.html  BufferManager.releaseBack.html  BufferManager.releaseFront.html  BufferManager.window.html  GCNoPointerAllocator.allocate.html  GCNoPointerAllocator.expand.html  GCNoPointerAllocator.goodAllocSize.html  GCNoPointerAllocator.html  GCNoPointerAllocator.instance.html  RingBuffer.avail.html  RingBuffer.capacity.html  RingBuffer.extend.html  RingBuffer.html  RingBuffer.releaseBack.html  RingBuffer.releaseFront.html  RingBuffer.window.html
docs/iopipe/bufpipe/: SimplePipe.chain.html  SimplePipe.extend.html  SimplePipe.html  SimplePipe.release.html  SimplePipe.this.html  SimplePipe.valve.html  SimplePipe.window.html  arrayCastPipe.html  asElemRange.html  asInputRange.html  bufd.html  byteSwapper.html  ensureElems.html  iosrc.html  outputPipe.html  process.html  rbufd.html  writeBuf.html
docs/iopipe/refc/: RefCounted._get.html  RefCounted.opAssign.html  RefCounted.this.html  refCounted.html
docs/iopipe/stream/: IODev.close.html  IODev.handle.html  IODev.html  IODev.put.html  IODev.read.html  NullDev.html  (+10 more)
examples/byline/: byline.d  dub.sdl
examples/convert/: convert.d
examples/search/: search.d
examples/unzip/: unzip.d
examples/zip/: zip.d
source/iopipe/: buffer.d  bufpipe.d  package.d  refc.d  stream.d  textpipe.d  traits.d  valve.d  zip.d
(+33 files in other folders)
